solve the image overwrite bugs when shift

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -44,8 +44,10 @@ main.site-about {
         padding: 0.3em;
         background-color: $grey-color-light;
         color: $text-color;
+        transition: transform .2s;
         &:hover {
           background-color: $background-color;
+          transform: scale(1.05);
         }
       }
     }
